chore: Kotlin compile task changes to work with latest OpenJDK ea releases.